# Trading_IA

./: .coverage  .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DASHBOARD_DOCUMENTATION_INDEX.md  DASHBOARD_IMPLEMENTATION_PROGRESS.md  DASHBOARD_STATUS_REPORT.md  DASHBOARD_UPDATES_2026_04_05.md  DEPLOYMENT.md  DOCUMENTACION_MODELOS.md  ESTADO_PROYECTO.md  GUIA_OPERACION.md  INSTRUCCIONES_EJECUCION.md  MULTIACTIVOS_CHECKLIST.md  PLAN_TRABAJO.md  PLAN_TRABAJO_PROPUESTO.md  PLAN_TRABAJO_V2.md  PROYECTO_COMPLETO.md  Propuestas_mejora_modelos.md  README_MEJORADO.md  RESUMEN_EJECUCION_CRYPTO.md  RESUMEN_FINAL_EJECUCION.md  SETUP_INDEX.md  SETUP_MANUAL.md  all_forex_output.txt  backtest_crypto_model.py  backtest_crypto_simple.py  backtest_crypto_trading.py  debug_yfinance.py  download_2years.py  download_batch.py  download_batch_result.json  download_crypto_data.py  download_forex.bat  download_forex.ps1  download_result.json  eurusd_output.txt  forex_output.txt  (+16 more)
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  ci.yml
.hypothesis/constants/: 27b55128f9f29513  3ab46516930b7e17  3abe986190f38a0f  3bc63537a637feb1  3f25f93f1176e876  451d7e53c5ace77a  54e022023867c387  6b451d494fc2b940  78cc9b9c1e7aaef4  a04fb2eed58760ea  afff9bf0cc8f8cb3  c3026f075f6af070  cd91d1877224c811  da39a3ee5e6b4b0d  df83818419c79aef  e0cdd3f69e77d54f  e9d3dcf5a3e4c3f2  f95f17f9c0916599
.streamlit/: config.toml
Skills/: SKILL.md
api/: dependencies.py  main.py
api/routes/: auth.py  backtesting.py  dashboard.py  execution.py  market.py  marketplace.py  portfolio.py  risk.py  signals.py  simulation.py  strategies.py
app/: README.md  dashboard.py  requirements.txt
app/pages/: backtesting.py  market_view.py  portfolio.py  risk_monitor.py  signals.py  simulator.py  strategies.py
backtest_results/: comprehensive_validation.json  live_trading_config.json  report_BTCUSDT_1h.json  report_ETHUSDT_1h.json
core/: exceptions.py  models.py
core/adaptation/: regime_watcher.py  retraining.py
core/agents/: __init__.py  agent_monitor.py  asset_specific_agent.py  base_agent.py  fundamental_agent.py  microstructure_agent.py  regime_agent.py  technical_agent.py
core/auth/: api_key_manager.py  jwt_handler.py  permissions.py
core/backtesting/: costs.py  engine.py  metrics.py
core/config/: constants.py  settings.py
core/consensus/: __init__.py  asset_specific_consensus.py  conflict_logger.py  voting_engine.py
core/db/: repository.py  session.py  user_repository.py
core/execution/: base_executor.py  live_executor.py  mt5_executor.py  order_tracker.py  paper_executor.py
core/features/: feature_engineering.py  feature_store.py  feature_validator.py  indicators.py
core/ingestion/: base_client.py  binance_client.py  bybit_client.py  data_validator.py  exchange_adapter.py  market_calendar.py  websocket_stream.py
core/marketplace/: models.py  strategy_marketplace.py
core/models/: __init__.py  asset_specific_models.py
core/monitoring/: alert_engine.py  error_handler.py  performance_tracker.py  prometheus_metrics.py
core/notifications/: telegram_bot.py
core/observability/: decision_tracer.py  logger.py
core/portfolio/: portfolio_manager.py  rebalancer.py
core/risk/: __init__.py  kill_switch.py  risk_manager.py  (+2 more)
docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
docs/: INTEGRACION_MULTIACTIVOS.md  README.md
examples/: mtf_sl_tp_example.py
scripts/: analyze_raw_data.py  analyze_structure.py  backup_db.py  check_raw_files.py  ci_backtest_gate.py  classify_raw_files.py  cleanup_all_files.py  cleanup_parquets.py  debug_agent_scores.py  debug_backtest.py  diagnose_and_cleanup_all.py  diagnose_backtest.py  download_all_forex.py  download_binance.py  download_data.py  download_eurusd_simple.py  download_forex.py  mover_archivos_raw.py  report_misplaced.py  retrain.py  run_backtest.py  run_fase1.py  run_pipeline.py  run_pipeline_mock.py  run_training_pipeline.py  seed_admin.py  seed_data.py  setup_vps.ps1  start_phase2.py  test_binance_api.py  test_fase1.py  test_model_prediction.py  test_mtf.py  test_validation.py  train_asset_specific_models.py  validate_data.py  validate_downloads.py
static/: README.md  crypto-dashboard.html  dashboard.html
tests/: conftest.py  enhanced_conftest.py
(+149 files in other folders)
